Validate redirect URI provided by client